--- a/ui.html
+++ b/ui.html
@@ -38,7 +38,7 @@
   #colors{
     padding: 0 16px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   .color-circle{
@@ -79,15 +79,15 @@
     display: block;
     position: relative;
     content: '';
-    width: 48px;
-    height: 48px;
+    width: 46px;
+    height: 46px;
     top: -9px;
     left: -9px;
     border-radius: 100%;
   }
 
   #colors input[type=radio]:checked ~ .radio-skin::after{
-    border: 3px solid white;
+    border: 4px solid #5A5A5F;
   }
 
 
