--- a/ui.html
+++ b/ui.html
@@ -13,7 +13,7 @@
   .skin-color6{ background-color: #402E23; }
 
   #container{
-    background-color: #1C1C1E;
+    background-color: #fff;
     color: white;
   }
 
@@ -31,7 +31,7 @@
     font-weight: bold;
     font-size: 16px;
     padding: 16px 0;
-    border-bottom: 1px solid #38383A;
+    border-bottom: 1px solid #E5E5E5;
     margin-bottom: 16px;
   }
 
