Show default eyes

--- a/ui.html
+++ b/ui.html
@@ -25,6 +25,23 @@
     height: 150px;
   }
 
+  #layer-stack{
+    position: relative;
+    width: 98px;
+    height: 108px;
+  }
+
+  .layer{
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  #eye-layer{
+    left: 18px;
+    top: 30px;
+  }
+
   #properties{
     text-align: center;
     color: #5396FA;
@@ -126,11 +143,10 @@
     <p>Count: <input id="count" value="5"></p>
   -->
   <section id="preview">
-    <!--
-      <svg width="97" height="110" viewBox="0 0 97 110" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path id="preview-head" fill-rule="evenodd" clip-rule="evenodd" d="M8.19697 36.0053C10.2014 15.7895 27.2568 0 48 0C68.751 0 85.8113 15.8013 87.8053 36.028C88.0344 36.0094 88.2661 36 88.5 36C93.1944 36 97 39.8056 97 44.5V51.5C97 56.1944 93.1944 60 88.5 60C88.3322 60 88.1654 59.9951 88 59.9855V70C88 92.0914 70.0914 110 48 110C25.9086 110 8 92.0914 8 70V59.9855C3.53831 59.7267 0 56.0266 0 51.5V44.5C0 39.907 3.6429 36.1649 8.19697 36.0053Z" fill="#FFCF37"/>
-      </svg>
-    -->
+    <div id="layer-stack">
+      <div class="layer" id="head-layer"></div>
+      <div class="layer" id="eye-layer"></div>
+    </div>
   </section>
   
   <section id="properties">
@@ -182,38 +198,42 @@
 
 <script>
 
-const AVATAR = '<svg width="97" height="110" viewBox="0 0 97 110" fill="none" xmlns="http://www.w3.org/2000/svg"><path id="head" fill-rule="evenodd" clip-rule="evenodd" d="M8.19697 36.0053C10.2014 15.7895 27.2568 0 48 0C68.751 0 85.8113 15.8013 87.8053 36.028C88.0344 36.0094 88.2661 36 88.5 36C93.1944 36 97 39.8056 97 44.5V51.5C97 56.1944 93.1944 60 88.5 60C88.3322 60 88.1654 59.9951 88 59.9855V70C88 92.0914 70.0914 110 48 110C25.9086 110 8 92.0914 8 70V59.9855C3.53831 59.7267 0 56.0266 0 51.5V44.5C0 39.907 3.6429 36.1649 8.19697 36.0053Z" fill="#FFCF37"/></svg>';
+  const HEAD = '<svg width="98" height="108" viewBox="0 0 98 108" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.0182 39.0711C10.0182 17.4927 27.511 0 49.0894 0C70.6678 0 88.1605 17.4927 88.1605 39.0711V40.3612C93.6109 40.4564 98 44.8964 98 50.3596C98 55.8229 93.6109 60.2629 88.1605 60.3581V68.9289C88.1605 90.5073 70.6678 108 49.0894 108C27.511 108 10.0182 90.5073 10.0182 68.9289V60C4.48532 60 0 55.5228 0 50C0 44.4772 4.48532 40 10.0182 40V39.0711Z" fill="#F3C09A"/></svg>';
+  const EYE_1 = '<svg width="62" height="36" viewBox="0 0 62 36" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="5.11731" y="1.70374" width="22" height="32" rx="11" fill="white"/><rect x="36" y="2" width="22" height="32" rx="11" fill="white"/><rect x="13.0432" y="9.62964" width="10" height="16" rx="5" fill="#434243"/><rect x="39.963" y="9.9259" width="10" height="16" rx="5" fill="#434243"/></svg>';
+  const EYE_2 = '<svg width="62" height="36" viewBox="0 0 62 36" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M5.11731 18V22.7037C5.11731 28.7789 10.0422 33.7037 16.1173 33.7037C22.1924 33.7037 27.1173 28.7789 27.1173 22.7037V18H5.11731Z" fill="white"/><path fill-rule="evenodd" clip-rule="evenodd" d="M13.0432 18V20.6296C13.0432 23.3911 15.2818 25.6296 18.0432 25.6296C20.8046 25.6296 23.0432 23.3911 23.0432 20.6296V18H13.0432Z" fill="#434243"/><path fill-rule="evenodd" clip-rule="evenodd" d="M36 18V23C36 29.0751 40.9249 34 47 34C53.0751 34 58 29.0751 58 23V18H36Z" fill="white"/><path fill-rule="evenodd" clip-rule="evenodd" d="M39.963 18V20.9259C39.963 23.6873 42.2016 25.9259 44.963 25.9259C47.7244 25.9259 49.963 23.6873 49.963 20.9259V18H39.963Z" fill="#434243"/></svg>';
+
+  let $preview = document.querySelector('#preview');
+  let $headLayer = $preview.querySelector('#head-layer');
+  let $eyeLayer = document.querySelector('#eye-layer');
+
+  /** avatar preview init */
+  document.addEventListener('DOMContentLoaded', () => {
+   $headLayer.innerHTML = HEAD;
+   $eyeLayer.innerHTML = EYE_1;
+  });
 
 
-
-let $preview = document.querySelector('#preview');
-
-
-document.addEventListener('DOMContentLoaded', () => {
-  $preview.innerHTML = AVATAR;
-});
-
-
-document.querySelectorAll("input[name='skin-color']").forEach((el) => {
-  el.addEventListener('change', function() {
-    //alert(document.querySelector("input[name='skin-color']:checked").value);
-    document.querySelector('#head').setAttribute('fill', document.querySelector("input[name='skin-color']:checked").value);
-  })
-});
+  /** Change head color */
+  document.querySelectorAll("input[name='skin-color']").forEach((el) => {
+    el.addEventListener('change', function() {
+      $headLayer.firstChild.firstChild.setAttribute('fill', document.querySelector("input[name='skin-color']:checked").value);
+    })
+  });
 
 
-document.getElementById('create').onclick = () => {
-  /*
-  const textbox = document.getElementById('count');
-  const count = parseInt(textbox.value, 10);
-  parent.postMessage({ pluginMessage: { type: 'create-rectangles', count } }, '*')
-  */
- const skinColor = document.querySelector("input[name='skin-color']:checked").value;
-  parent.postMessage({ pluginMessage: { type: 'create-avatar', skinColor } }, '*');
-}
+  /** create avatar in Figma */
+  document.getElementById('create').onclick = () => {
+    /*
+    const textbox = document.getElementById('count');
+    const count = parseInt(textbox.value, 10);
+    parent.postMessage({ pluginMessage: { type: 'create-rectangles', count } }, '*')
+    */
+  const skinColor = document.querySelector("input[name='skin-color']:checked").value;
+    parent.postMessage({ pluginMessage: { type: 'create-avatar', skinColor } }, '*');
+  }
 
-document.getElementById('cancel').onclick = () => {
-  parent.postMessage({ pluginMessage: { type: 'cancel' } }, '*')
-}
+  document.getElementById('cancel').onclick = () => {
+    parent.postMessage({ pluginMessage: { type: 'cancel' } }, '*')
+  }
 
 </script>
