--- a/ui.html
+++ b/ui.html
@@ -18,6 +18,9 @@
     background-color: #fff;
     color: white;
     width: 330px;
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
 
   #builder{
@@ -138,7 +141,10 @@
 
   #actions{
     padding: 16px;
-    text-align: right;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
   }
 
   button {
