UI ready to test

--- a/ui.html
+++ b/ui.html
@@ -283,7 +283,7 @@
   
   <section id="panels">
     <div id="panel-stack">
-      <div id="skin-panel" class="panel">
+      <div id="skin-panel" class="panel selected">
         <div id="colors">
           <div class="radio-wrap">
             <input type="radio" id="color-1" name="skin-color" value="#5396FA">
@@ -317,7 +317,7 @@
           </div>
         </div>
       </div>
-      <div id="eyes-panel" class="panel selected">
+      <div id="eyes-panel" class="panel">
         <div id="eyes-radios" class="radio-shape-group">
           
           <div class="radio-shape circle">
