Add 2 types of eyes and fix selector issue

--- a/ui.html
+++ b/ui.html
@@ -12,6 +12,7 @@
   .skin-color5{ background-color: #916441; }
   .skin-color6{ background-color: #402E23; }
 
+
   #container{
     display: flex;
     flex-direction: column;
@@ -101,9 +102,9 @@
   /* RADIO SHAPE */
   .radio-shape-group{
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
   }
-  .radio-shape{position: relative; box-sizing: border-box;}
+  .radio-shape{position: relative; box-sizing: border-box; margin: 0 14px 14px 0;}
   .radio-shape input[type=radio]{display: none;}
   .radio-shape label{
     position: absolute;
@@ -115,8 +116,10 @@
     height: 100%;
   }
   .radio-shape .shape{
-    display: block;
+    display: flex;
     position: relative;
+    justify-content: center;
+    align-items: center
   }
   .radio-shape .shape::after{
     display: block;
@@ -150,6 +153,7 @@
     height: 58px;
     top: -9px;
     left: -9px;
+    position: absolute;
     border-radius: 6px;
   }
   
@@ -166,7 +170,7 @@
     border-radius: 6px;    
   }
 
-
+  
 
 
 
@@ -283,6 +287,7 @@
   
   <section id="panels">
     <div id="panel-stack">
+<!-- SKIN PANEL-->
       <div id="skin-panel" class="panel selected">
         <div id="colors">
           <div class="radio-wrap">
@@ -317,8 +322,43 @@
           </div>
         </div>
       </div>
+
+<!-- EYES PANEL-->
       <div id="eyes-panel" class="panel">
         <div id="eyes-radios" class="radio-shape-group">
+
+          <div class="radio-shape rectangle">
+            <input type="radio" id="eyes-1" name="shape" value="EYE_1" checked="checked">
+            <label for="eyes-1"></label>
+            <div class="shape skin-color4"></div>
+          </div>
+          <div class="radio-shape rectangle">
+            <input type="radio" id="eyes-2" name="shape" value="EYE_2">
+            <label for="eyes-2"></label>
+            <div class="shape skin-color4"></div>
+          </div>
+          <div class="radio-shape rectangle">
+            <input type="radio" id="eyes-3" name="shape" value="3">
+            <label for="eyes-3"></label>
+            <div class="shape skin-color4"></div>
+          </div>
+          <div class="radio-shape rectangle">
+            <input type="radio" id="eyes-4" name="shape" value="3">
+            <label for="eyes-4"></label>
+            <div class="shape skin-color4"></div>
+          </div>
+          <div class="radio-shape rectangle">
+            <input type="radio" id="eyes-5" name="shape" value="3">
+            <label for="eyes-5"></label>
+            <div class="shape skin-color4"></div>
+          </div>
+
+        </div>
+      </div>
+
+<!-- MOUTH PANEL-->      
+      <div id="mouth-panel" class="panel">
+        <div class="radio-shape-group">
           
           <div class="radio-shape circle">
             <input type="radio" id="radio-id-1" name="shape" value="1">
@@ -338,6 +378,7 @@
 
         </div>
       </div>
+
     </div>
   </section>
   
@@ -356,17 +397,24 @@
   const EYE_1 = '<svg width="62" height="36" viewBox="0 0 62 36" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="5.11731" y="1.70374" width="22" height="32" rx="11" fill="white"/><rect x="36" y="2" width="22" height="32" rx="11" fill="white"/><rect x="13.0432" y="9.62964" width="10" height="16" rx="5" fill="#434243"/><rect x="39.963" y="9.9259" width="10" height="16" rx="5" fill="#434243"/></svg>';
   const EYE_2 = '<svg width="62" height="36" viewBox="0 0 62 36" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M5.11731 18V22.7037C5.11731 28.7789 10.0422 33.7037 16.1173 33.7037C22.1924 33.7037 27.1173 28.7789 27.1173 22.7037V18H5.11731Z" fill="white"/><path fill-rule="evenodd" clip-rule="evenodd" d="M13.0432 18V20.6296C13.0432 23.3911 15.2818 25.6296 18.0432 25.6296C20.8046 25.6296 23.0432 23.3911 23.0432 20.6296V18H13.0432Z" fill="#434243"/><path fill-rule="evenodd" clip-rule="evenodd" d="M36 18V23C36 29.0751 40.9249 34 47 34C53.0751 34 58 29.0751 58 23V18H36Z" fill="white"/><path fill-rule="evenodd" clip-rule="evenodd" d="M39.963 18V20.9259C39.963 23.6873 42.2016 25.9259 44.963 25.9259C47.7244 25.9259 49.963 23.6873 49.963 20.9259V18H39.963Z" fill="#434243"/></svg>';
 
+  const $menu = document.querySelector('#menu ul');
+  
   const $preview = document.querySelector('#preview');
   const $headLayer = $preview.querySelector('#head-layer');
   const $eyeLayer = document.querySelector('#eye-layer');
-  const $menu = document.querySelector('#menu ul');
+  
   const $panelStack = document.querySelector('#panel-stack');
 
-
-    /** Initialization */
+  
+  /** Initialization */
   document.addEventListener('DOMContentLoaded', () => {
-   $headLayer.innerHTML = HEAD;
-   $eyeLayer.innerHTML = EYE_1;
+    // initialization avatar preview layers
+    $headLayer.innerHTML = HEAD;
+    $eyeLayer.innerHTML = EYE_1;
+    
+    // initization eyes panel
+    $panelStack.querySelector('#eyes-1 ~ .shape').innerHTML = EYE_1;
+    $panelStack.querySelector('#eyes-2 ~ .shape').innerHTML = EYE_2;
   });
 
 /**
